update: ファビコン追加とリンク修正等

--- a/gallery-photo.html
+++ b/gallery-photo.html
@@ -12,6 +12,7 @@
     <meta name="robots" content="nofollow">
     <link href="import.css" rel="stylesheet" type="text/css" />
     <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+    <link rel="icon" href="img/character.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -423,13 +424,14 @@
         <img src="img/Logo-white_2.png" alt="ロゴ">
         <p>check me!</p>
         <div class="sns-icon">
-            <a href="https://x.com/hoshiya__mo7?s=21&t=fE87rFMq51MivjQf99G1jA" target="_blank"><img src="img/icon/logo-white.png"></a>
-            <a href="https://www.instagram.com/mo7_hoshiya?igsh=bWRwemI4cnBtZzlj&utm_source=qr" target="_blank"><img src="img/icon/Instagram_Glyph_White.png"></a>
+            <a href="https://x.com/hoshiya__mo7?s=21&t=fE87rFMq51MivjQf99G1jA" target="_blank" rel="noopener noreferrer"> <img src="img/icon/logo-white.png"></a>
+            <a href="https://www.instagram.com/mo7_hoshiya?igsh=bWRwemI4cnBtZzlj&utm_source=qr" target="_blank" rel="noopener noreferrer"> <img src="img/icon/Instagram_Glyph_White.png"></a>
+            <a href="https://discordapp.com/users/748455036727590932" target="_blank" rel="noopener noreferrer"> <img src="img/icon/Discord-Symbol-White.png"></a>
         </div>
     </div>
 
     <footer class="fade">
-        <p>© 2025&emsp;sample</p>
+        <p>© 2025&emsp;cofenja</p>
     </footer>
     
     <script src="top-animation.js"></script>
