--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="robots" content="nofollow">
     <link href="import.css" rel="stylesheet" type="text/css" />
     <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
-
+    <link rel="icon" href="img/character.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -108,14 +108,15 @@
                         キャラクターデザインや世界観のあるイラストを描くこと、<br>
                         カメラをもって散歩に行くことが好き<br>
                         学生時代から有償でのイラスト制作を始め、現在もキャライラストをメインに依頼を受けている<br>
-                        本職での経験を生かして当サイトも自分でコーディングした<br>
+                        本職での経験を生かしてこのサイトも自分でデザイン、コーディングした<br>
                         Live2Dとblender勉強中！
                     </p>
                     <br>
                     <div class="sns-icon color"> 
                         <p> cheack me!</p>
-                        <a href="https://x.com/hoshiya__mo7?s=21&t=fE87rFMq51MivjQf99G1jA" target="_blank"> <img src="img/icon/logo-white.png"></a>
-                        <a href="https://www.instagram.com/mo7_hoshiya?igsh=bWRwemI4cnBtZzlj&utm_source=qr" target="_blank"> <img src="img/icon/Instagram_Glyph_White.png"></a>
+                        <a href="https://x.com/hoshiya__mo7?s=21&t=fE87rFMq51MivjQf99G1jA" target="_blank" rel="noopener noreferrer"> <img src="img/icon/logo-white.png"></a>
+                        <a href="https://www.instagram.com/mo7_hoshiya?igsh=bWRwemI4cnBtZzlj&utm_source=qr" target="_blank" rel="noopener noreferrer"> <img src="img/icon/Instagram_Glyph_White.png"></a>
+                        <a href="https://discordapp.com/users/748455036727590932" target="_blank" rel="noopener noreferrer"> <img src="img/icon/Discord-Symbol-White.png"></a>
                     </div>
                 </div>
             </div>
@@ -126,13 +127,13 @@
             <h2 class="title fade">Contact</h2>
             <div class="contact fade inner">
                 <div class="contast-text">
-                    <p>一週間以内に返信いたします。<br>
-                    ご依頼やご相談など下記までお気軽にお問い合わせください。<br>
-                    内容により返信できない場合がございます。
+                    <p>お問い合わせは下記メールまたは各SNSのDMより受け付けています。<br>
+                    ご依頼やご相談などお気軽にお問い合わせください。<br>
                     </p>
                 </div>
-                <div class="contact-button"><a href="mailto:@XXXXX@mail.com">xxxxx@mail.com</a></div>
-                <small>メールソフトが起動します。</small>
+                <div class="contact-button">
+                    <a class="mailtoui" href="mailto:cofenja@gmail.com">cofenja@gmail.com</a>
+                </div>
             </div>
         </div>
 
@@ -142,18 +143,19 @@
         <img src="img/Logo-white_2.png" alt="ロゴ">
         <p>check me!</p>
         <div class="sns-icon">
-            <a href="https://x.com/hoshiya__mo7?s=21&t=fE87rFMq51MivjQf99G1jA" target="_blank"><img src="img/icon/logo-white.png"></a>
-            <a href="https://www.instagram.com/mo7_hoshiya?igsh=bWRwemI4cnBtZzlj&utm_source=qr" target="_blank"><img src="img/icon/Instagram_Glyph_White.png"></a>
+            <a href="https://x.com/hoshiya__mo7?s=21&t=fE87rFMq51MivjQf99G1jA" target="_blank" rel="noopener noreferrer"> <img src="img/icon/logo-white.png"></a>
+            <a href="https://www.instagram.com/mo7_hoshiya?igsh=bWRwemI4cnBtZzlj&utm_source=qr" target="_blank" rel="noopener noreferrer"> <img src="img/icon/Instagram_Glyph_White.png"></a>
+            <a href="https://discordapp.com/users/748455036727590932" target="_blank" rel="noopener noreferrer"> <img src="img/icon/Discord-Symbol-White.png"></a>
         </div>
     </div>
 
     <footer class="fade">
-        <p>© 2025&emsp;sample</p>
+        <p>© 2025&emsp;cofenja</p>
     </footer>
     
     <script src="top-animation.js"></script>
     <script src="scroll-animation.js"></script>
-
+    <script src="https://cdn.jsdelivr.net/npm/mailtoui@1.0.3/dist/mailtoui-min.js" data-options='{ "title": "新しいメールを", "buttonText1": "Gmailで作成する", "buttonText2": "Outlookで作成する", "buttonText3": "Yahoo!メールで作成する", "buttonText4": "デフォルトのメールアプリから作成する", "buttonTextCopy": "コピー" }'></script>
 
 </body>
 
