--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="robots" content="nofollow">
     <link href="import.css" rel="stylesheet" type="text/css" />
     <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
-    <link rel="icon" href="img/character.ico" type="image/x-icon">
+    <link rel="icon" href="img/icon/character.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -35,8 +35,6 @@
                 <li class="c-txt line center"><a href="gallery.html">Gallery</a></li>
                 <li class="c-txt line center"><a href="#content-profile">Profile</a></li>
                 <li class="c-txt line center"><a href="#content-contact">Contact</a></li>
-                <!-- <li class="sns"><a href="" target="_blank"><img src="img/icon/logo-white.png"></a></li>
-                <li class="sns"><a href="" target="_blank"><img src="img/icon/Instagram_Glyph_White.png"></a></li> -->
             </ul>
         </nav>
         </div>
@@ -105,10 +103,10 @@
                     <p>Hoshiya Mona</p>
                     <br>
                     <p>
-                        キャラクターデザインや世界観のあるイラストを描くこと、<br>
+                        キャラクターデザインや<br class="SP">世界観のあるイラストを描くこと、<br>
                         カメラをもって散歩に行くことが好き<br>
-                        学生時代から有償でのイラスト制作を始め、現在もキャライラストをメインに依頼を受けている<br>
-                        本職での経験を生かしてこのサイトも自分でデザイン、コーディングした<br>
+                        学生時代から有償でのイラスト制作を始め、<br class="SP">現在もキャライラストをメインに依頼を受けている<br>
+                        本職での経験を生かしてこのサイトも<br class="SP">自分でデザイン、コーディングした<br>
                         Live2Dとblender勉強中！
                     </p>
                     <br>
@@ -127,8 +125,8 @@
             <h2 class="title fade">Contact</h2>
             <div class="contact fade inner">
                 <div class="contast-text">
-                    <p>お問い合わせは下記メールまたは各SNSのDMより受け付けています。<br>
-                    ご依頼やご相談などお気軽にお問い合わせください。<br>
+                    <p>お問い合わせは下記メール<br class="SP">または各SNSのDMより受け付けています。<br>
+                    ご依頼やご相談など<br class="SP">お気軽にお問い合わせください。<br>
                     </p>
                 </div>
                 <div class="contact-button">
