--- a/gallery.html
+++ b/gallery.html
@@ -12,7 +12,7 @@
     <meta name="robots" content="nofollow">
     <link href="import.css" rel="stylesheet" type="text/css" />
     <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
-    <link rel="icon" href="img/character.ico" type="image/x-icon">
+    <link rel="icon" href="img/icon/character.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -36,8 +36,6 @@
                 <li class="c-txt line center"><a href="gallery.html" class="now">Gallery</a></li>
                 <li class="c-txt line center"><a href="index.html#content-profile">Profile</a></li>
                 <li class="c-txt line center"><a href="index.html#content-contact">Contact</a></li>
-                <!-- <li class="sns"><a href="" target="_blank"><img src="img/icon/logo-white.png"></a></li>
-                <li class="sns"><a href="" target="_blank"><img src="img/icon/Instagram_Glyph_White.png"></a></li> -->
             </ul>
         </nav>
         </div>
