--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <div id="content-contact">
             <h2 class="title fade">Contact</h2>
             <div class="contact fade inner">
-                <div class="contast-text">
+                <div class="contact-text">
                     <p>お問い合わせは下記メール<br class="SP">または各SNSのDMより受け付けています。<br>
                     ご依頼やご相談など<br class="SP">お気軽にお問い合わせください。<br>
                     </p>
