update: ポップアップ修正

--- a/gallery-photo.html
+++ b/gallery-photo.html
@@ -244,7 +244,7 @@
             <div class="popup_box" id="popup_01">
               <img src="img/photo/candle.JPG" alt="">
               <p>撮影地：江の島<br>
-            期間限定イベント時に撮影&ensp;2021/11/06</p>
+            期間限定イベント時に撮影&ensp<br class="SP">;2021/11/06</p>
             </div>
 
             <div class="popup_box" id="popup_02">
@@ -280,7 +280,7 @@
 
             <div class="popup_box" id="popup_07">
                 <img src="img/photo/neko.JPG" alt="">
-                <p>撮影地：どこかの猫カフェ<br>
+                <p>撮影地：<br class="SP">どこかの猫カフェ<br>
                 2020/03/19</p>
             </div>  
 
@@ -292,38 +292,38 @@
 
             <div class="popup_box" id="popup_09">
                 <img src="img/photo/fumikiri.JPG" alt="">
-                <p>撮影地：実家の近所<br>
+                <p>撮影地：<br class="SP">実家の近所<br>
                 2019/02/08</p>
             </div>  
 
             <div class="popup_box" id="popup_10">
                 <img src="img/photo/kurage2.JPG" alt="">
-                <p>撮影地：新江ノ島水族館<br>
+                <p>撮影地：<br class="SP">新江ノ島水族館<br>
                 2021/07/09</p>
             </div>  
 
             <div class="popup_box" id="popup_11">
                 <img src="img/photo/hanabi.JPG" alt="">
-                <p>撮影地：祖母宅の庭<br>
+                <p>撮影地：<br class="SP">祖母宅の庭<br>
                 2021/08/26</p>
             </div>  
 
             <div class="popup_box" id="popup_12">
                 <img src="img/photo/hotarumaru.JPG" alt="">
-                <p>撮影地：実家のベランダ<br>
+                <p>撮影地：<br class="SP">実家のベランダ<br>
                     <a href="https://aso-asomo.com/?pid=137113848&srsltid=AfmBOoofvaTL_y5TLUDsvEcEuTg4bEIqlFtEX642p76lPlMpINoPFWbE" target="_blank">蛍丸サイダー商品ページ</a><br>
                 2020/04/29</p>
             </div>  
 
             <div class="popup_box" id="popup_13">
                 <img src="img/photo/sakura-yoru.JPG" alt="">
-                <p>撮影地：実家の近所<br>
+                <p>撮影地：<br class="SP">実家の近所<br>
                 2019/04/03</p>
             </div>  
 
             <div class="popup_box" id="popup_14">
                 <img src="img/photo/IMG_1085.JPG" alt="">
-                <p>撮影地：実家の近所<br>
+                <p>撮影地：<br class="SP">実家の近所<br>
                 2019/03/05</p>
             </div>  
 
@@ -347,14 +347,14 @@
             
             <div class="popup_box" id="popup_18">
                 <img src="img/photo/todoroki.JPG" alt="">
-                <p>撮影地：等々力渓谷<br>
+                <p>撮影地：<br class="SP">等々力渓谷<br>
                 2022/05/04</p>
             </div>  
 
             <div class="popup_box" id="popup_19">
                 <img src="img/photo/umi.JPG" alt="">
-                <p>撮影地：新江ノ島水族館<br>
-                モデル：水族館スタッフ、偶然映り込んだ知らない子<br>
+                <p>撮影地：<br class="SP">新江ノ島水族館<br>
+                モデル：水族館スタッフ、<br class="SP">偶然映り込んだ知らない子<br>
             2021/07/09</p>
             </div>  
 
@@ -366,7 +366,7 @@
 
             <div class="popup_box" id="popup_21">
                 <img src="img/photo/kurage1.JPG" alt="">
-                <p>撮影地：新江ノ島水族館<br>
+                <p>撮影地：<br class="SP">新江ノ島水族館<br>
                 2021/06/25</p>
             </div>  
 
@@ -378,13 +378,13 @@
 
             <div class="popup_box" id="popup_23">
                 <img src="img/photo/kurage3.JPG" alt="">
-                <p>撮影地：すみだ水族館<br>
+                <p>撮影地：<br class="SP">すみだ水族館<br>
                 2024/07/07</p>
             </div>  
 
             <div class="popup_box" id="popup_24">
                 <img src="img/photo/natsumi.JPG" alt="">
-                <p>撮影地：鎌倉、長谷寺<br>
+                <p>撮影地：<br class="SP">鎌倉、長谷寺<br>
                 モデル：友人<br>
             2023/06/11</p>
             </div>  
@@ -397,19 +397,19 @@
 
             <div class="popup_box" id="popup_26">
                 <img src="img/photo/dentyu.JPG" alt="">
-                <p>撮影地：実家の近所<br>
+                <p>撮影地：<br class="SP">実家の近所<br>
                 2020/04/02</p>
             </div>  
 
             <div class="popup_box" id="popup_27">
                 <img src="img/photo/chinanago.JPG" alt="">
-                <p>撮影地：すみだ水族館<br>
+                <p>撮影地：<br class="SP">すみだ水族館<br>
                 2023/03/18</p>
             </div>  
 
             <div class="popup_box" id="popup_28">
                 <img src="img/photo/ume.JPG" alt="">
-                <p>撮影地：実家の近所<br>
+                <p>撮影地：<br class="SP">実家の近所<br>
                     2019/03/05</p>
             </div> 
         </div>
