--- a/gallery.html
+++ b/gallery.html
@@ -287,29 +287,29 @@
             <div class="popup_box" id="popup_03">
               <div class="tit"><span>TRPG用立ち絵依頼</span></div>
               <img src="img/illustration/gyougestu.png" alt="">
-              <p>TRPG&ensp;CoCシナリオ「愛罠蜂」<br>
+              <p>TRPG&ensp;CoCシナリオ<br class="SP">「愛罠蜂」<br>
               HO1 オーナーシェフ</p>
             </div>
 
             <div class="popup_box" id="popup_04">
                 <div class="tit"><span>TRPG用立ち絵依頼</span></div>
                 <img src="img/illustration/maina.png" alt="">
-                <p>TRPG&ensp;CoCシナリオ「愛罠蜂」<br>
+                <p>TRPG&ensp;CoCシナリオ<br class="SP">「愛罠蜂」<br>
                     HO2 バイト</p>
             </div>
       
             <div class="popup_box" id="popup_05">
                 <div class="tit"><span>Vtuberデザイン</span></div>
                 <img src="img/illustration/kurage.png" alt="">
-                <p>Vtuberキャラクターデザインラフ<br>
+                <p>Vtuber<br class="SP">キャラクターデザインラフ<br>
                 モデリング完成次第nizimaにて販売予定<br class="SP">（時期未定）</p>
             </div>  
 
             <div class="popup_box" id="popup_06">
                 <div class="tit"><span>Vtuberデザイン</span></div>
                 <img src="img/illustration/kistune.png" alt="">
-                <p>Vtuberキャラクターデザイン<br>
-                モデリング完成次第nizimaにて販売予定<br class="SP">（2025年夏頃）</p>
+                <p>Vtuber<br class="SP">キャラクターデザイン<br>
+                モデリング完成次第<br class="SP">nizimaにて販売予定<br class="SP">（2025年夏頃）</p>
             </div>  
 
 
@@ -328,63 +328,63 @@
             <div class="popup_box" id="popup_09">
                 <div class="tit"><span>スチールイラスト依頼</span></div>
                 <img src="img/illustration/GARU-magic.png" alt="">
-                <p>同人ゲーム「がると最後の夏休み」<br class="SP">（配信終了）<br>
+                <p>同人ゲーム<br class="SP">「がると最後の夏休み」<br class="SP">（配信終了）<br>
                 ゲーム内スチールイラスト</p>
             </div>  
 
             <div class="popup_box" id="popup_10">
                 <div class="tit"><span>スチールイラスト依頼</span></div>
                 <img src="img/illustration/GARU-umi.png" alt="">
-                <p>同人ゲーム「がると最後の夏休み」<br class="SP">（配信終了）<br>
+                <p>同人ゲーム<br class="SP">「がると最後の夏休み」<br class="SP">（配信終了）<br>
                 ゲーム内スチールイラスト</p>
             </div>  
 
             <div class="popup_box" id="popup_11">
                 <div class="tit"><span>キャラクターイラスト依頼</span></div>
                 <img src="img/illustration/garu.png" alt="">
-                <p>同人ゲーム「がると最後の夏休み」<br class="SP">（配信終了）<br>
+                <p>同人ゲーム<br class="SP">「がると最後の夏休み」<br class="SP">（配信終了）<br>
                 がるちゃん&ensp;立ち絵イラスト</p>
             </div>  
 
             <div class="popup_box" id="popup_12">
                 <div class="tit"><span>ファンアート</span></div>
                 <img src="img/illustration/nagiko-hanabi.png" alt="">
-                <p>マグメル深海水族館&ensp;湊凪子<br>
+                <p>マグメル深海水族館&ensp;<br class="SP">湊凪子<br>
                 3時間ドローイング</p>
             </div>  
 
             <div class="popup_box" id="popup_13">
                 <div class="tit"><span>TRPG用立ち絵</span></div>
                 <img src="img/illustration/olivia.png" alt="">
-                <p>TRPG&ensp;COCシナリオ「ドロップアウトディスパイア」<br>
+                <p>TRPG&ensp;COCシナリオ<br class="SP">「ドロップアウトディスパイア」<br>
                 HO2 殺人（コロシビト）</p>
             </div>  
 
             <div class="popup_box" id="popup_14">
                 <div class="tit"><span>TRPG用立ち絵依頼</span></div>
                 <img src="img/illustration/arisa.png" alt="">
-                <p>TRPG&ensp;COCシナリオ「透明となった君へ」<br>
+                <p>TRPG&ensp;COCシナリオ<br class="SP">「透明となった君へ」<br>
                  KPC 幽霊</p>
             </div>  
 
             <div class="popup_box" id="popup_15">
                 <div class="tit"><span>TRPG用立ち絵</span></div>
                 <img src="img/illustration/mia.png" alt="">
-                <p>TRPG&ensp;COCシナリオ「Good morning ALL」<br>
+                <p>TRPG&ensp;COCシナリオ<br class="SP">「Good morning ALL」<br>
                  HO 不老不死</p>
             </div>  
 
             <div class="popup_box" id="popup_16">
                 <div class="tit"><span>TRPG用立ち絵</span></div>
                 <img src="img/illustration/elis.png" alt="">
-                <p>TRPG&ensp;COCシナリオ「星を喰む」<br>
+                <p>TRPG&ensp;COCシナリオ<br class="SP">「星を喰む」<br>
                  過去にデザインした<br class="SP">オリジナルキャラクターを使用</p>
             </div>  
 
             <div class="popup_box" id="popup_17">
                 <div class="tit"><span>背景ありイラスト</span></div>
                 <img src="img/illustration/tenshi.png" alt="">
-                <p>「夜を奏でる展」出展イラスト</p>
+                <p>「夜を奏でる展」<br class="SP">出展イラスト</p>
             </div>  
             
             <div class="popup_box" id="popup_18">
@@ -403,86 +403,86 @@
                 <div class="tit"><span>Twitchメンバーシップ特典依頼</span></div>
                 <img src="img/illustration/SORA-stamp.PNG" alt="">
                 <p><a href="https://www.twitch.tv/rosesora1114" target="_blank">ソラのゲーム放送局</a><br>
-                メンバーシップ用スタンプ、バッジ作成</p>
+                メンバーシップ用スタンプ、<br class="SP">バッジ作成</p>
             </div>  
 
             <div class="popup_box" id="popup_21">
                 <div class="tit"><span>オリジナルイラスト</span></div>
                 <img src="img/illustration/hitsuji.png" alt="">
-                <p>オリジナルキャラクターの一枚絵</p>
+                <p>オリジナルキャラクターの<br class="SP">一枚絵</p>
             </div>  
 
 
             <div class="popup_box" id="popup_22">
                 <div class="tit"><span>TRPG用立ち絵依頼</span></div>
                 <img src="img/illustration/fuma.png" alt="">
-                <p>TRPG&ensp;COCシナリオ「ソープスクール」<br>
+                <p>TRPG&ensp;COCシナリオ<br class="SP">「ソープスクール」<br>
                     HO 美術教師</p>
             </div>  
 
             <div class="popup_box" id="popup_23">
                 <div class="tit"><span>TRPG用立ち絵依頼</span></div>
                 <img src="img/illustration/karin.png" alt="">
-                <p>TRPG&ensp;COCシナリオ「怪物 A」<br>
+                <p>TRPG&ensp;COCシナリオ<br class="SP">「怪物 A」<br>
                     HO 多重債務者</p>
             </div>  
 
             <div class="popup_box" id="popup_24">
                 <div class="tit"><span>TRPG用立ち絵依頼</span></div>
                 <img src="img/illustration/rion.png" alt="">
-                <p>TRPG&ensp;COCシナリオ「君を土に埋める日」<br>
+                <p>TRPG&ensp;COCシナリオ<br class="SP">「君を土に埋める日」<br>
                     HO 大学生</p>
             </div>  
 
             <div class="popup_box" id="popup_25">
                 <div class="tit"><span>ファンアート</span></div>
                 <img src="img/illustration/koutaro.png" alt="">
-                <p>「マグメル深海水族館」天城航太朗<br>
+                <p>「マグメル深海水族館」<br class="SP">天城航太朗<br>
                     3時間ドローイング</p>    
             </div>  
 
             <div class="popup_box" id="popup_26">
                 <div class="tit"><span>オリジナルイラスト</span></div>
                 <img src="img/illustration/kamisama.png" alt="">
-                <p>オリジナルキャラクターの一枚絵</p>    
+                <p>オリジナルキャラクターの<br class="SP">一枚絵</p>    
             </div>  
 
             <div class="popup_box" id="popup_27">
                 <div class="tit"><span>依頼イラスト</span></div>
                 <img src="img/illustration/furasuta.png" alt="">
-                <p>ライブ開催祝いフラワースタンド用イラスト</p>    
+                <p>ライブ開催祝い<br class="SP">フラワースタンド用イラスト</p>    
             </div>  
 
 
             <div class="popup_box" id="popup_28">
                 <div class="tit"><span>オリジナルイラスト</span></div>
                 <img src="img/illustration/elis2.png" alt="">
-                <p>オリジナルキャラクターの一枚絵<br>
+                <p>オリジナルキャラクターの<br class="SP">一枚絵<br>
             </div> 
 
             <div class="popup_box" id="popup_29">
                 <div class="tit"><span>メッセージカードデザイン依頼</span></div>
                 <img src="img/illustration/LEO.png" alt="">
-                <p>地下アイドル誕生日用メッセージカードデザイン</p>
+                <p>地下アイドル誕生日用<br class="SP">メッセージカードデザイン</p>
             </div>  
 
             <div class="popup_box" id="popup_30">
                 <div class="tit"><span>タオルデザイン依頼</span></div>
                 <img src="img/illustration/LEO-towel.png" alt="">
-                <p>地下アイドル誕生日用グッズのタオルデザイン</p>
+                <p>地下アイドル誕生日用<br class="SP">グッズのタオルデザイン</p>
             </div>  
 
             <div class="popup_box" id="popup_31">
                 <div class="tit"><span>TRPG用立ち絵依頼</span></div>
                 <img src="img/illustration/natsuki.png" alt="">
-                <p>TRPG&ensp;COCシナリオ「透明となった君へ」<br>
+                <p>TRPG&ensp;COCシナリオ<br class="SP">「透明となった君へ」<br>
                     KPC　幽霊</p>
             </div>  
 
             <div class="popup_box" id="popup_32">
                 <div class="tit"><span>TRPG用立ち絵</span></div>
                 <img src="img/illustration/masahiro.png" alt="">
-                <p>TRPG&ensp;COCシナリオ「透明となった君へ」<br>
+                <p>TRPG&ensp;COCシナリオ<br class="SP">「透明となった君へ」<br>
                     HO　小説家</p>
             </div>  
 
