update: スマホ崩れ対応

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="noindex">
     <meta name="robots" content="nofollow">
-    <link href="import.css" rel="stylesheet" type="text/css" />
+]    <link href="import.css" rel="stylesheet" type="text/css" />
     <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
     <link rel="icon" href="img/icon/character.ico" type="image/x-icon">
 </head>
