update: トップgallery修正

--- a/index.html
+++ b/index.html
@@ -50,33 +50,24 @@
 
         <div class="gallery">
             <!-- <h2 class="title">Gallery</h2> -->
-            <div class="wrap slide-paused" ontouchstart="">
-                <ul class="slideshow">
-                    <li><a href="gallery.html"><img src="img/picture1.png" class="content1 content content-hover"></a></li>
-                    <li><a href="gallery.html"><img src="img/picture2.png" class="content2 content content-hover"></a></li>
-                    <li><a href="gallery-photo.html"><img src="img/picture3.png" class="content3 content content-hover"></a></li>
-                    <li><a href="gallery.html"><img src="img/picture4.png" class="content4 content content-hover"></a></li>
-                    <li><a href="gallery-photo.html"><img src="img/picture5.png" class="content5 content content-hover"></a></li>
-                    <li><a href="gallery.html"><img src="img/picture6.png" class="content6 content content-hover"></a></li>
-                    <li><a href="gallery-photo.html"><img src="img/picture7.png" class="content7 content content-hover"></a></li>
+            <div class="loop-wrap">
+                <ul class="loop-list">
+                    <li class="item1"><a href="gallery.html"><img src="img/picture1.png"></a></li>
+                    <li class="item2"><a href="gallery.html"><img src="img/picture2.png"></a></li>
+                    <li class="item3"><a href="gallery-photo.html"><img src="img/picture3.png"></a></li>
+                    <li class="item4"><a href="gallery.html"><img src="img/picture4.png"></a></li>
+                    <li class="item5"><a href="gallery-photo.html"><img src="img/picture5.png"></a></li>
+                    <li class="item6"><a href="gallery.html"><img src="img/picture6.png"></a></li>
+                    <li class="item7"><a href="gallery-photo.html"><img src="img/picture7.png"></a></li>
                 </ul>
-                <ul class="slideshow">
-                    <li><a href="gallery.html"><img src="img/picture1.png" class="content1 content content-hover"></a></li>
-                    <li><a href="gallery.html"><img src="img/picture2.png" class="content2 content content-hover"></a></li>
-                    <li><a href="gallery-photo.html"><img src="img/picture3.png" class="content3 content content-hover"></a></li>
-                    <li><a href="gallery.html"><img src="img/picture4.png" class="content4 content content-hover"></a></li>
-                    <li><a href="gallery-photo.html"><img src="img/picture5.png" class="content5 content content-hover"></a></li>
-                    <li><a href="gallery.html"><img src="img/picture6.png" class="content6 content content-hover"></a></li>
-                    <li><a href="gallery-photo.html"><img src="img/picture7.png" class="content7 content content-hover"></a></li>
-                </ul>
-                <ul class="slideshow">
-                    <li><a href="gallery.html"><img src="img/picture1.png" class="content1 content content-hover"></a></li>
-                    <li><a href="gallery.html"><img src="img/picture2.png" class="content2 content content-hover"></a></li>
-                    <li><a href="gallery-photo.html"><img src="img/picture3.png" class="content3 content content-hover"></a></li>
-                    <li><a href="gallery.html"><img src="img/picture4.png" class="content4 content content-hover"></a></li>
-                    <li><a href="gallery-photo.html"><img src="img/picture5.png" class="content5 content content-hover"></a></li>
-                    <li><a href="gallery.html"><img src="img/picture6.png" class="content6 content content-hover"></a></li>
-                    <li><a href="gallery-photo.html"><img src="img/picture7.png" class="content7 content content-hover"></a></li>
+                <ul class="loop-list">
+                    <li class="item1"><a href="gallery.html"><img src="img/picture1.png"></a></li>
+                    <li class="item2"><a href="gallery.html"><img src="img/picture2.png"></a></li>
+                    <li class="item3"><a href="gallery-photo.html"><img src="img/picture3.png"></a></li>
+                    <li class="item4"><a href="gallery.html"><img src="img/picture4.png"></a></li>
+                    <li class="item5"><a href="gallery-photo.html"><img src="img/picture5.png"></a></li>
+                    <li class="item6"><a href="gallery.html"><img src="img/picture6.png"></a></li>
+                    <li class="item7"><a href="gallery-photo.html"><img src="img/picture7.png"></a></li>
                 </ul>
             </div>
             <p class="fade">
