update: トップアニメ修正

--- a/index.html
+++ b/index.html
@@ -51,24 +51,26 @@
         <div class="gallery">
             <!-- <h2 class="title">Gallery</h2> -->
             <div class="loop-wrap">
-                <ul class="loop-list">
-                    <li class="item1"><a href="gallery.html"><img src="img/picture1.png"></a></li>
-                    <li class="item2"><a href="gallery.html"><img src="img/picture2.png"></a></li>
-                    <li class="item3"><a href="gallery-photo.html"><img src="img/picture3.png"></a></li>
-                    <li class="item4"><a href="gallery.html"><img src="img/picture4.png"></a></li>
-                    <li class="item5"><a href="gallery-photo.html"><img src="img/picture5.png"></a></li>
-                    <li class="item6"><a href="gallery.html"><img src="img/picture6.png"></a></li>
-                    <li class="item7"><a href="gallery-photo.html"><img src="img/picture7.png"></a></li>
-                </ul>
-                <ul class="loop-list">
-                    <li class="item1"><a href="gallery.html"><img src="img/picture1.png"></a></li>
-                    <li class="item2"><a href="gallery.html"><img src="img/picture2.png"></a></li>
-                    <li class="item3"><a href="gallery-photo.html"><img src="img/picture3.png"></a></li>
-                    <li class="item4"><a href="gallery.html"><img src="img/picture4.png"></a></li>
-                    <li class="item5"><a href="gallery-photo.html"><img src="img/picture5.png"></a></li>
-                    <li class="item6"><a href="gallery.html"><img src="img/picture6.png"></a></li>
-                    <li class="item7"><a href="gallery-photo.html"><img src="img/picture7.png"></a></li>
-                </ul>
+                <div class="loop-inner">
+                    <ul class="loop-list">
+                        <li class="item1"><a href="gallery.html"><img src="img/picture1.png"></a></li>
+                        <li class="item2"><a href="gallery.html"><img src="img/picture2.png"></a></li>
+                        <li class="item3"><a href="gallery-photo.html"><img src="img/picture3.png"></a></li>
+                        <li class="item4"><a href="gallery.html"><img src="img/picture4.png"></a></li>
+                        <li class="item5"><a href="gallery-photo.html"><img src="img/picture5.png"></a></li>
+                        <li class="item6"><a href="gallery.html"><img src="img/picture6.png"></a></li>
+                        <li class="item7"><a href="gallery-photo.html"><img src="img/picture7.png"></a></li>
+                    </ul>
+                    <ul class="loop-list">
+                        <li class="item1"><a href="gallery.html"><img src="img/picture1.png"></a></li>
+                        <li class="item2"><a href="gallery.html"><img src="img/picture2.png"></a></li>
+                        <li class="item3"><a href="gallery-photo.html"><img src="img/picture3.png"></a></li>
+                        <li class="item4"><a href="gallery.html"><img src="img/picture4.png"></a></li>
+                        <li class="item5"><a href="gallery-photo.html"><img src="img/picture5.png"></a></li>
+                        <li class="item6"><a href="gallery.html"><img src="img/picture6.png"></a></li>
+                        <li class="item7"><a href="gallery-photo.html"><img src="img/picture7.png"></a></li>
+                    </ul>
+                </div>
             </div>
             <p class="fade">
                 <a class="button" href="gallery.html" ><span>All veaw</span></a>
