--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="ja">
 
 <head>
-    <title>image-test</title>
+    <title>星屋もな ポートフォリオサイト</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
