fix: update　スペルミス修正

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 </div>
             </div>
             <p class="fade">
-                <a class="button" href="gallery.html" ><span>All veaw</span></a>
+                <a class="button" href="gallery.html" ><span>All view</span></a>
             </p>
             <div class="top-character">
                 <img src="img/0604.png">
@@ -104,7 +104,7 @@
                     </p>
                     <br>
                     <div class="sns-icon color"> 
-                        <p> cheack me!</p>
+                        <p> check me!</p>
                         <a href="https://x.com/hoshiya__mo7?s=21&t=fE87rFMq51MivjQf99G1jA" target="_blank" rel="noopener noreferrer"> <img src="img/icon/logo-white.png"></a>
                         <a href="https://www.instagram.com/mo7_hoshiya?igsh=bWRwemI4cnBtZzlj&utm_source=qr" target="_blank" rel="noopener noreferrer"> <img src="img/icon/Instagram_Glyph_White.png"></a>
                         <a href="https://discordapp.com/users/748455036727590932" target="_blank" rel="noopener noreferrer"> <img src="img/icon/Discord-Symbol-White.png"></a>
